--- a/style.scss
+++ b/style.scss
@@ -485,41 +485,42 @@ header {
 
 footer {
   margin-top: 20px;
-
-  .regions {
-    .title {
-
-    }
-
-    .regions-list {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      width: 100%;
-      margin-bottom: 20px;
-
-      img {
-        height: 50px;
-        padding: 5px;
-      }
-    }
-
-    .financeurs {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      flex-wrap: wrap;
-      width: 100%;
-
-      img {
-        height: 50px;
-        padding: 5px;
-      }
-    }
-
+  .logo-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
 
 
   }
+
+  .soutien {
+    .regions-list {
+      margin-bottom: 20px;
+    }
+    img {
+      height: 50px;
+      padding: 5px;
+    }
+
+    margin-bottom: 10px;
+  }
+
+  .socials {
+    img {
+      height: 30px;
+      padding: 5px;
+      filter: opacity(60%);
+    }
+  }
+
+  .legals {
+    text-align: center;
+    font-size: 12px;
+    filter: opacity(60%);
+    margin-bottom: 10px;
+  }
+
 }
 
