--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ header {
   margin-bottom: 20px;
   padding: 0 10px 10px 10px;
 }
+header .menu-mobile {
+  display: none;
+}
 header .wrapper .top {
   display: flex;
   justify-content: space-between;
@@ -381,28 +384,115 @@ footer .legals {
     padding: 0;
     height: 140px;
   }
+  header .menu-mobile {
+    display: block;
+  }
+  header .menu-mobile .highlight {
+    background: #7B119C;
+    color: white;
+  }
+  header .menu-icon {
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    margin: 10px;
+    font-size: 50px;
+    z-index: 999;
+  }
+  header .menu {
+    width: calc(100% - 20px);
+    position: absolute;
+    top: 100%;
+    right: 0;
+    padding: 10px;
+    background-color: #f2f2f2;
+    list-style: none;
+    margin: 0;
+    z-index: 998;
+    display: none;
+  }
+  header .menu li {
+    margin: 0;
+  }
+  header .menu a {
+    display: block;
+    padding: 10px;
+    color: #333;
+    text-decoration: none;
+  }
+  header #toggle-menu:checked + .menu-icon + .menu {
+    display: block;
+  }
+  header #toggle-menu {
+    display: none;
+  }
+  header .three {
+    margin-right: 10px;
+  }
+  header .three .text {
+    display: none;
+  }
   header .navbar {
     overflow: hidden;
     max-height: 0;
   }
-  header .hamb {
+  header .hamburger, header .close {
+    border: none;
     cursor: pointer;
-    position: relative;
-    float: right;
-    padding: 30px;
+    /* position absolute position the icons relative to the body because they have no position relative parents*/
+    display: flex;
+    justify-content: right;
   }
-  header .hamb-line::before,
-  header .hamb-line::after {
-    background: var(--white);
-    content: "";
-    display: block;
-    height: 100%;
+  header .hamburger {
+    background: white;
+  }
+  header .close {
+    background: black;
+  }
+  header .hamburger img, header .close img {
+    width: 30px;
+    height: 30px;
+  }
+  header .navbar {
     position: absolute;
-    transition: all 0.2s ease-out;
+    /* a higher z-index put navbar above hamburger */
+    z-index: 1000;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    /* basic menu styling*/
+    list-style: none;
+    background: black;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    /* animate slide up/down */
+    transform: translateY(-100%);
+    transition: transform 0.2s ease;
   }
-  header .hamb-line::before {
-    top: 5px;
+  header .navbar:target {
+    /* show navbar */
+    transform: translateY(0);
+  }
+  header li a {
+    display: block;
+    font-family: "Open Sans", sans-serif;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    /* remove default underline and add our own with padding and border bottom */
+    text-decoration: none;
+    border-bottom: 1px solid black;
+    padding-bottom: 0.5rem;
+  }
+  header li a:hover, header li a:focus {
+    /* show border bottom */
+    border-bottom: 1px solid white;
   }
   .grid-container .one {
     grid-column: 1/13;
