Revert "Merge branch 'master' of https://github.com/leo-bacquart/Projet-APFA"
This reverts commit 3b0d10d8b0566b82168ce746a040cd9622ab3426, reversing
changes made to d5084363c676e9e37c227d3c6dd0e08b2405575c.

--- a/style.scss
+++ b/style.scss
@@ -108,6 +108,7 @@ header {
   }
 }
 
+
 // GRID (content)
 .grid-container {
   //DEFINING GRID
@@ -487,7 +488,6 @@ header {
   }
 }
 
-//FOOTER
 footer {
   margin-top: 20px;
   .logo-list {
@@ -529,16 +529,15 @@ footer {
 
 }
 
-//MOBILE
+
+
 @media only screen and (max-width: 768px) {
    .wrapper {
     max-width: 768px;
   }
 
-  // HEADER
+  //TODO Header avec navbar responsive
   header {
-
-    // NAVBAR (BURGER MENU)
     .menu-mobile {
       display: block;
       .highlight {
@@ -667,7 +666,6 @@ footer {
     }
   }
 
-  // CONTENT
   .grid-container {
 
     .one {
