--- a/style.scss
+++ b/style.scss
@@ -8,11 +8,6 @@
 
 //HEADER
 header {
-  .menu-mobile {
-    display: none;
-  }
-
-
   background: #efefef;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   position: sticky;
@@ -29,7 +24,7 @@ header {
       justify-content: space-between;
     }
 
-    .logo-afpa {
+    .why-afpa {
       width: 190px;
 
       img {
@@ -37,7 +32,7 @@ header {
       }
     }
 
-    .slogan {
+    .carousel {
       flex-grow: 4;
 
       font-family: Roboto, sans-serif;
@@ -527,210 +522,5 @@ footer {
     margin-bottom: 10px;
   }
 
-}
-
-
-
-@media only screen and (max-width: 768px) {
-   .wrapper {
-    max-width: 768px;
-  }
-
-  //TODO Header avec navbar responsive
-  header {
-    .menu-mobile {
-      display: block;
-      .highlight {
-        background: #7B119C;
-        color: white;
-      }
-    }
-    .menu-icon {
-      cursor: pointer;
-      display: block;
-      position: absolute;
-      top: 70px;
-      right: 0;
-      margin: 10px;
-      font-size: 50px;
-      z-index: 999;
-    }
-    .menu {
-      width: calc(100% - 20px);
-      position: absolute;
-      top: 100%;
-      right: 0;
-      padding: 10px;
-      background-color: #f2f2f2;
-      list-style: none;
-      margin: 0;
-      z-index: 998;
-      display: none;
-    }
-    .menu li {
-      margin: 0;
-    }
-
-    .menu a {
-      display: block;
-      padding: 10px;
-      color: #333;
-      text-decoration: none;
-    }
-
-    #toggle-menu:checked + .menu-icon + .menu {
-      display: block;
-    }
-
-    #toggle-menu {
-      display: none;
-    }
-
-    .three {
-      margin-right: 10px;
-      .text {
-        display: none;
-      }
-    }
-
-    padding: 0;
-    height: 140px;
-
-    .navbar {
-      overflow: hidden;
-      max-height: 0;
-    }
-
-    .hamburger, .close {
-      border: none;
-      cursor: pointer;
-      /* position absolute position the icons relative to the body because they have no position relative parents*/
-      display: flex;
-      justify-content: right;
-    }
-
-    .hamburger {
-      background: white;
-    }
-
-    .close {
-      background: black;
-    }
-
-    .hamburger img, .close img {
-      width: 30px;
-      height: 30px;
-    }
-
-    .navbar {
-      position: absolute;
-      /* a higher z-index put navbar above hamburger */
-      z-index: 1000;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-      /* basic menu styling*/
-      list-style: none;
-      background: black;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: space-evenly;
-      align-items: center;
-      /* animate slide up/down */
-      transform: translateY(-100%);
-      transition: transform 0.2s ease;
-    }
-
-    .navbar:target {
-      /* show navbar */
-      transform: translateY(0);
-    }
-
-    li a {
-      display: block;
-      font-family: 'Open Sans', sans-serif;
-      color: white;
-      font-weight: bold;
-      font-size: 1.2rem;
-      /* remove default underline and add our own with padding and border bottom */
-      text-decoration: none;
-      border-bottom: 1px solid black;
-      padding-bottom: 0.5rem;
-    }
-
-    li a:hover, li a:focus {
-      /* show border bottom */
-      border-bottom: 1px solid white;
-    }
-  }
-
-  .grid-container {
-
-    .one {
-      grid-column: 1 / 13;
-      grid-row: 1;
-    }
-    .two {
-      grid-column: 1/13;
-      grid-row: 2;
-    }
-
-    .four {
-      grid-column: 1 / 13;
-      grid-row: 3;
-    }
-    .five {
-      grid-column: 1/13;
-      grid-row: 4;
-    }
-
-    .content-box {
-      align-items: center;
-
-      height: 200px;
-      width: 100%;
-
-      grid-column: 1 / 13;
-      .row-one {
-        grid-row: 4;
-      }
-      .row-two {
-        grid-row: 5;
-      }
-      .row-three {
-        grid-row: 6;
-      }
-    }
-
-    .actu-title {
-      grid-column: 1/13;
-      grid-row: 8;
-    }
-
-    .grid-box {
-      width: calc(100% - 20px);
-      margin: auto;
-    }
-
-    .carousel {
-      height: 300px;
-    }
-
-    .content-box {
-      padding: 0;
-    }
-
-    .four-col-left {
-      grid-column: 1 / 13;
-    }
-    .four-col-middle {
-      grid-column: 1 / 13;
-    }
-    .four-col-right {
-      grid-column: 1 / 13;
-    }
-  }
 }
 
